[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "=0.3.31"
zerofrom = "=0.1.0"
native-tls = "=0.2.12"
litemap = "=0.7.4"
select = "=0.6.0"
reqwest = "=0.12.8"

[dependencies.tokio]
version = "=1.41.1"
features = ["full"]
