[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerofrom = "=0.1.0"
native-tls = "=0.2.12"
litemap = "=0.7.4"
select = "=0.6.0"

[dependencies.reqwest]
version = "=0.12.8"
features = ["blocking"]
